src/download/views/DownloadSelectionView.css
.download-view {
  height: 100%;
}

.download-view .selection-lists {
  height: calc(100% - 30px);
  overflow-y: auto;
  margin-left: -5px;
}

.download-view .selection-lists.with-terms {
  height: calc(100% - 60px);
}

.download-view .selection-norecords {
    color: white;
    padding: 5px;
}

.download-control {
  position: absolute;
  width: calc(100% - 10px);
  margin-bottom: 5px;
  bottom: 0px;
}

.download-control .checkbox {
  width: 100%;
}

